fixed right-header-content alignment issues.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -98,13 +98,6 @@
   color: rgb(15, 26, 46);
 }
 
-.home-icon {
-  position: absolute;
-  right: 1rem; /* Position the search bar to the right */
-  top: 50%;
-  transform: translateY(-50%); /* Vertically center */
-}
-
 .App-title {
   position: right;
   font-size: 4rem;
@@ -112,9 +105,15 @@
 
 .header-content {
   display: flex;
+  justify-content: space-around;
   align-items: center;
-  float: right;
-  margin-left: 30%;
+}
+
+.right-header-content {
+  display: flex;
+  position: absolute;
+  right: 0;
+  margin: 20px;
 }
 
 .search-container {
@@ -192,13 +191,7 @@ footer {
 }
 
 /* Styling for each icon */
-.icon {
-  /* ... (existing styles) ... */
-  position: relative; /* Needed for absolute positioning of the text */
-  display: flex; /* To center text both horizontally and vertically */
-  justify-content: center; /* Aligns horizontally */
-  align-items: center; /* Aligns vertically */
-}
+
 
 /* Styling for the text inside icons */
 .icon-text {
@@ -371,7 +364,13 @@ footer {
   width: 50px;
   height: 50px;
   border-radius: 100%;
-  margin-left: 35%
+  margin-right: 10px;
+}
+
+.login-logout-button-div {
+  float: right;
+  position: relative;
+  margin-left: 100px;
 }
 
 .login-logout-button:hover {
